[gd_scene load_steps=5 format=3 uid="uid://btgscju7nimrs"]

[ext_resource type="PackedScene" uid="uid://upj0sdwdk8dq" path="res://Player_Virus.tscn" id="1_ctr5c"]
[ext_resource type="Script" path="res://tutorial.gd" id="1_wpiot"]
[ext_resource type="PackedScene" uid="uid://654jyc617hjg" path="res://white_cell.tscn" id="2_f6dki"]

[sub_resource type="Curve2D" id="Curve2D_0aq5j"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1188, -71, 0, 0, 0, 0, 1203, 686, 0, 0, 0, 0, -50, 689, 0, 0, 0, 0, -51, -75, 0, 0, 0, 0, 1188, -71)
}
point_count = 5

[node name="Game" type="Node2D"]
script = ExtResource("1_wpiot")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 2.0
offset_top = -2.0
offset_right = 1145.0
offset_bottom = 643.0

[node name="Player" parent="." instance=ExtResource("1_ctr5c")]
unique_name_in_owner = true
position = Vector2(565, 324)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-556.057, -279.81)
scale = Vector2(0.979266, 0.935864)
curve = SubResource("Curve2D_0aq5j")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(1188, -71)
rotation = 1.55098

[node name="White Cell" parent="." instance=ExtResource("2_f6dki")]
position = Vector2(447, 153)

[node name="White Cell2" parent="." instance=ExtResource("2_f6dki")]
position = Vector2(432, 184)

[node name="White Cell3" parent="." instance=ExtResource("2_f6dki")]
position = Vector2(487, 168)

[node name="White Cell4" parent="." instance=ExtResource("2_f6dki")]
position = Vector2(1271, -74)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00784314, 0.00784314, 0.00784314, 0.415686)

[node name="Label" type="Label" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -62.0
offset_right = -26.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.43021, 5.61047)
theme_override_font_sizes/font_size = 17
text = "Operation failed!"
horizontal_alignment = 1

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
